Delivery-1.8.0-RC2